--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -1,45 +1,19 @@
 #
-# Resource file Dust parameters. 
+# Resource file Dust parameters.
 #
 
-aerosol_radBands_optics_file:      ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_DU.v15_3.RRTMG.nc 
+aerosol_radBands_optics_file:      ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_DU.v15_3.RRTMG.nc
 aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_DU.v15_3.nc
 
 particle_radius_microns: 0.73 1.4 2.4 4.5 8.0
-
 radius_lower: 0.1 1.0 1.8 3.0 6.0
-
 radius_upper: 1.0 1.8 3.0 6.0 10.0
 
-# units [kg/m-3]
+# units kg m^{-3}
 particle_density: 2500. 2650. 2650. 2650. 2650.
 
-# Ginoux emission scheme
-# -----------------------
-emission_scheme: ginoux
-#Ch_DU: 0.2 0.2 0.07 0.07 0.07 0.056 #original values for (a,b,c,d,e,f)
-Ch_DU:  0.3 0.3 0.11 0.11 0.11 0.088 
 
-# source_fraction: 0.0435465   0.106903   0.220117   0.484606   0.144828
-source_fraction: 0.1 0.25 0.25 0.25 0.25
 
-# K14 emission scheme
-# -------------------
-#emission_scheme: k14
-#source_fraction:  0.043 0.106 0.219 0.485 0.144
-#Ch_DU: 0.02 0.02 0.02 0.0161 0.015 0.015 # resolution dependent tuning constant for emissions (a,b,c,d,e,f)
-
-# Threshold friction velocity parameter 'gamma'
-uts_gamma: 1.65e-4
-
-# Formulation of the clay and silt factor in K14 that modulates the strength of the dust emissions
-clayFlag: 1     # 0 - original K14, 1 - I&K2017, 2 - I&K2017
-
-# soil mosture scaling factor
-soil_moisture_factor: 0.8
-
-# clay fraction scaling factor
-soil_clay_factor: 1.0
 
 # Scavenging efficiency per bin [km-1]
 fscav: 0.2  0.2  0.2  0.2  0.2
@@ -50,16 +24,76 @@ molecular_weight: 0.1  0.1  0.1  0.1  0.1
 # Number of particles per kg mass
 fnum: 2.45e14  3.28e13  6.52e12  9.89e11 1.76e11
 
+
 rhFlag: 0
 
 # Maring settling velocity correction
-maringFlag: .true. 
+maringFlag: .true.
 
 nbins: 5
 
+
 pressure_lid_in_hPa: 0.01
 
-# FENGSHA settings
-alpha: 0.3
-gamma: 1.3
+## <<--- Select the Emission scheme -->>
+
+emission_scheme: ginoux01
+#emission_scheme: sginoux
+#emission_scheme: dead03
+#emission_scheme: kok14
+#emission_scheme: fengsha
+
+# apply veg mask or not. 0 = N, 1 = Y [for 'ginoux01','dead03','sginoux']
+apply_veg_mask: 1
+
+# soil freezing condition ['ginoux01', 'sginoux', 'dead03', 'fengsha']
+soil_freezing_temp: 273.0
+
+## ginoux01 scheme
+# resolution dependent tuning constant for emissions (a,b,c,d,e,f)
+Ch_DU_ginoux01: 0.3 0.3 0.11 0.11 0.11 0.088
+source_fraction_ginoux01: 0.1 0.25 0.25 0.25 0.25
+
+
+## sginoux scheme
+Ch_DU_sginoux: 0.3 0.3 0.11 0.11 0.11 0.088
+source_fraction_sginoux: 0.1 0.25 0.25 0.25 0.25
+dry_threshold_ut: 6.5
+
+
+## dead03 scheme
+cs: 2.61
+monomodal_soil_diameter: 75.e-06
+znot_ms: 33.e-06
+znot_m: 100.e-06
+uniform_clay_fraction: 0.2
+source_fraction_dead03: 0.1 0.1 0.2 0.5 0.1
+
+
+## kok14 scheme
+Ch_DU_kok14: 0.02 0.02 0.02 0.0161 0.015 0.015
+source_fraction_kok14: 0.043 0.106 0.219 0.485 0.144
+
+# Threshold friction velocity parameter 'gamma'
+
+uts_gamma: 0.000165
+
+# Formulation of the clay and silt factor in K14 that modulates the strength of the dust emissions
+clayFlag: 1  # 0 - original K14, 1 - I&K2017, 2 - I&K2017
+# soil moisture scaling factor
+soil_moisture_factor: 0.8
+
+# clay fraction scaling factor
+soil_clay_factor: 1.0
+
+
+
+
+## fengsha scheme
+#alpha: 0.3
+#gamma: 1.3
+# use the below ones tested in their latest s2s work
+alpha: 0.1
+gamma: 1.0
 vertical_to_horizontal_flux_ratio_limit: 2.e-04
+source_fraction_fengsha: 0.1 0.1 0.2 0.5 0.1
