--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.volc.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.volc.rc
@@ -2,13 +2,13 @@
 # Resource file for Sulfer parameters.
 #
 
-aerosol_radBands_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_SU.v1_3.RRTMG.nc
-aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_SU.v1_3.nc
+aerosol_radBands_optics_file: /discover/nobackup/pcolarco/fvInput/AeroCom/x/integ-su_ht_reff04_sig16_single-raw.RRTMG.nc 
+aerosol_monochromatic_optics_file: /discover/nobackup/pcolarco/fvInput/AeroCom/x/integ-su_ht_reff04_sig16_single-raw.nc
 
 nbins: 4
 
 # Volcanic pointwise sources
-volcano_srcfilen: ExtData/chemistry/CARN/v202106/sfc/so2_volcanic_emissions_CARN_v202106.degassing_only.rc
+volcano_srcfilen: /discover/nobackup/pcolarco/fvInput/pointwise_sources/hunga_tonga/so2_volcanic_emissions_TongaMIP_exp2.%y4%m2%d2.rc
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
@@ -23,7 +23,7 @@ aircraft_fuel_emission_factor: 1.0000
 fscav: 0.0  0.0  0.4  0.4
 
 # Dry particle radius [um], used for settling
-particle_radius_microns: 0.0 0.0 0.35 0.0
+particle_radius_microns: 0.0 0.0 0.39 0.0
 
 # Type of settling to use (see Chem_SettlingMod)
 rhFlag: 4
@@ -40,10 +40,10 @@ molecular_weight: -1  -1  0.132  -1
 fnum: -1  -1  9.01e16  -1
 
 # Number median radius [um]
-particle_radius_number: -1  -1  0.0695  -1
+particle_radius_number: -1  -1  0.23  -1
 
 # Sigma of lognormal number distribution
-sigma: -1  -1  2.03  -1
+sigma: -1  -1  1.6  -1
 
 # OH H2O2 NO3 from GMI Combined Stratosphere Troposphere (Lower case yes to enable)
 # -------------------------------------------------------------------------------------
@@ -54,5 +54,5 @@ export_H2O2: no
 using_GMI_OH: .false.
 using_GMI_NO3: .false.
 using_GMI_H2O2: .false.
-using_GMI: .false.
-disable_emissions: .false.
+using_GMI: .true.
+disable_emissions: .true.
