--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
@@ -89,6 +89,7 @@ category: EXPORT
  *DP          | kg m-2 s-1   | xy    | N     | nbins                          | * Aerosol Dry Deposition (Bin %d)
  *WT          | kg m-2 s-1   | xy    | N     | nbins                          | * Aerosol Wet Deposition (Bin %d)
  *SV          | kg m-2 s-1   | xy    | N     | nbins                          | * Aerosol Convective Scavenging (Bin %d)
+ *CH          | kg m-2 s-1   | xy    | N     | nbins                          | * Aerosol Parameterized Chemical Loss (Bin %d)
  *EMAN        | kg m-2 s-1   | xy    | N     |                                | * Aerosol Anthropogenic Emissions
  *EMBB        | kg m-2 s-1   | xy    | N     |                                | * Aerosol Biomass Burning Emissions
  *EMBF        | kg m-2 s-1   | xy    | N     |                                | * Aerosol Biofuel Emissions
