--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
@@ -26,7 +26,7 @@ hydrophobic_fraction: 0.5
 time_days_hydrophobic_to_hydrophilic: 2.5
 
 # Rate of chemical destruction of carbon species [days]
-time_days_chemical_destruction: -1.   6.0
+time_days_chemical_destruction: -1.   -1.
 
 # Scavenging efficiency per bin [km-1] (NOT USED UNLESS RAS IS CALLED)
 fscav: 0.0  0.4 
