--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required (VERSION 3.17)
 cmake_policy (SET CMP0053 NEW)
 cmake_policy (SET CMP0054 NEW)
 
-# mepo can now clone subrepos in three styles
+# Let's look for the ESMA cmake directory in a few places
+# to see if we are building standalone
 set (ESMA_CMAKE_DIRS
   cmake
   @cmake
@@ -13,7 +14,6 @@ foreach (dir IN LISTS ESMA_CMAKE_DIRS)
   if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/${dir})
     list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/${dir}")
     set (ESMA_CMAKE_PATH "${CMAKE_CURRENT_LIST_DIR}/${dir}" CACHE PATH "Path to ESMA_cmake code")
-    include (esma)
     set(GOCART_STANDALONE TRUE)
   endif ()
 endforeach ()
@@ -59,7 +59,6 @@ if (UFS_GOCART)
 endif()
 
 if (NOT COMMAND esma)
-    list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake@")
     include (esma)
 endif()
 
