--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
@@ -53,10 +53,10 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
  NAME          | UNITS      | DIMS | VLOC | UNGRIDDED                      | LONG NAME
 #----------------------------------------------------------------------------------------
- SUEM          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfer Emission (Bin %d)
- SUDP          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfate Dry Deposition (Bin %d)
- SUSD          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfate Settling (Bin %d)
- SUWT          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfate Wet Deposition (Bin %d)
+ SUEM          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfur Emission (Bin %d)
+ SUDP          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfur Dry Deposition (Bin %d)
+ SUSD          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfur Settling (Bin %d)
+ SUWT          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfur Wet Deposition (Bin %d)
  SUSV          | kg m-2 s-1 | xy   | N    | self%nbins                     | Sulfate Convective Scavenging (Bin %d)
  SO4EMAN       | kg m-2 s-1 | xy   | N    |                                | SO4 Anthropogenic Emissions
  SO2EMAN       | kg m-2 s-1 | xy   | N    |                                | SO2 Anthropogenic Emissions
