--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 # Anchors to prevent forgetting to update a version
-baselibs_version: &baselibs_version v7.5.0
-bcs_version: &bcs_version v10.23.0
+baselibs_version: &baselibs_version v7.7.0
+bcs_version: &bcs_version v10.25.0
 
 orbs:
   ci: geos-esm/circleci-tools@1
@@ -50,5 +50,6 @@ workflows:
           baselibs_version: *baselibs_version
           repo: GEOSgcm
           checkout_fixture: true
+          fixture_branch: R21C
           mepodevelop: true
           persist_workspace: false # Needs to be true to run fv3/gcm experiment, costs extra
