--- a/ESMF/GOCART_GridComp/CH4_GridComp/AMIP/CH4_GridComp_ExtData.yaml
+++ b/ESMF/GOCART_GridComp/CH4_GridComp/AMIP/CH4_GridComp_ExtData.yaml
@@ -14,7 +14,7 @@ Collections:
 
 Samplings:
   CH4_sample_0:
-    time_interpolation: 'False'
+    time_interpolation: False
   CH4_sample_1:
     extrapolation: clim
   CH4_sample_2:
