--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
@@ -54,4 +54,5 @@ export_H2O2: no
 using_GMI_OH: .false.
 using_GMI_NO3: .false.
 using_GMI_H2O2: .false.
-
+using_GMI: .true.
+disable_emissions: .false.
