Update ESMF CMake target to ESMF::ESMF
This PR updates the ESMF CMake target to `ESMF::ESMF` which is the
correct canonical target name for ESMF. This is necessary for Spack
compatibility. NOTE: This requires ESMF 8.6.1 or later.

--- a/ESMF/Aerosol_GridComp/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/CMakeLists.txt
@@ -4,7 +4,7 @@ if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Aerosol_GridComp.F90)
 
     esma_add_library (${this}
             SRCS Aerosol_GridComp.F90
-            DEPENDENCIES GOCART2G_GridComp MAPL esmf)
+            DEPENDENCIES GOCART2G_GridComp MAPL ESMF::ESMF)
 
     mapl_acg (${this} Aerosol_StateSpecs.rc
             IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS
