--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -38,6 +38,6 @@ PASSIVE_INSTANCES_NI:
 # ---------------------
 aerosol_monochromatic_optics_wavelength_in_nm_from_LUT: 470 550 670 870
 
-wavelengths_for_profile_aop_in_nm: 550               # must be included in LUT
-wavelengths_for_vertically_integrated_aop_in_nm: 550 # must be included in LUT
+wavelengths_for_profile_aop_in_nm: 470 550 870               # must be included in LUT
+wavelengths_for_vertically_integrated_aop_in_nm: 470 550 870 # must be included in LUT
 
