--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.yaml
@@ -94,50 +94,50 @@ Exports:
   BC_SHIP:
     - {starting: "1979-01-15T12:00", collection: CA2G_BC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, sample: CA2G_sample_1, regrid: CONSERVE, variable: bc_shipping}
     - {starting: "2019-12-15T12:00", collection: CA2G_BC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, regrid: CONSERVE, sample: CA2G_sample_3, variable: bc_shipping}
-  BRC_AIRCRAFT:
+  BR_AIRCRAFT:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: none
-  BRC_ANTEBRC1:
+  BR_ANTEBR1:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: anteoc1
-  BRC_ANTEBRC2:
+  BR_ANTEBR2:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: anteoc2
-  BRC_AVIATION_CDS:
+  BR_AVIATION_CDS:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: oc_aviation
-  BRC_AVIATION_CRS:
+  BR_AVIATION_CRS:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: oc_aviation
-  BRC_AVIATION_LTO:
+  BR_AVIATION_LTO:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: oc_aviation
-  BRC_BIOFUEL:
+  BR_BIOFUEL:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: biofuel
-  BRC_BIOMASS:
+  BR_BIOMASS:
     - {starting: "1960-01-16T12:00", collection: CA2G_hfed.emis_oc.x576_y361.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
     - {starting: "2000-03-01T00:00", collection: CA2G_qfed2.emis_oc.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
-  BRC_SHIP:
+  BR_SHIP:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
     variable: oc_ship
-  BRC_TERPENE:
+  BR_TERPENE:
     collection: /dev/null
     regrid: CONSERVE
     sample: CA2G_sample_2
