--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.oc.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.oc.rc
@@ -11,6 +11,18 @@ aircraft_fuel_emission_factor: 1.0000
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
 
+# Input emission pointer names
+aircraft_fuel_src: OC_AIRCRAFT
+biomass_src:       OC_BIOMASS
+biofuel_src:       OC_BIOFUEL
+eocant1_src:       OC_ANTEOC1
+eocant2_src:       OC_ANTEOC2
+ship_src:          OC_SHIP
+aviation_lto_src:  OC_AVIATION_LTO
+aviation_cds_src:  OC_AVIATION_CDS
+aviation_crs_src:  OC_AVIATION_CRS
+
+
 # Fraction of biogenic VOCs emissions for SOA production
 monoterpenes_emission_fraction: 0.05
 isoprene_emission_fraction:     0.03
